web/style.css
.comfy-mobile-form-sidebar-toggle {
    width: var(--sidebar-width);
    height: var(--sidebar-width);
}

.comfy-mobile-form {
    position: absolute;
    inset: 0;

    background-color: var(--bg-color);
    color: var(--fg-color);
    font-size: 1.0rem;

    overflow-x: hidden;
    overflow-y: auto;

    display: flex;
    flex-direction: column;
    gap: .3em;
    padding: .25em .4em;
}

.comfy-mobile-form-hidden {
    display: none !important;
}

.comfy-mobile-form-row {
    display: flex;
    flex-direction: row;
    gap: .25em;
}

.comfy-mobile-form-widget {
    flex: 1 1 0;

    display: flex;
    flex-direction: column;

    label {
        font-size: .75em;
        color: var(--descrip-text);
    }

    input, textarea, select {
        font-size: inherit;
    }

    textarea {
        min-height: 3em;
    }
}

.comfy-mobile-form-group {
    display: flex;
    flex-direction: column;

    padding: .1em .25em .5em;
}

